Bug 1348547 - ReleaseCachedProcesses() between aboutdebugging tests; r=gabor